Cambios en Trello

--- a/TrelloV1/index.html
+++ b/TrelloV1/index.html
@@ -9,14 +9,13 @@
 </head>
 <body>
 <div class="container-fluid">
-	<fieldset class="row rosa" id="div1">
+	<div class="row rosa">
 		<div class="col-xs-12 col-xl-12">
-			<button class="inicio text-center btn" onclick="agrega()" id="addbutton">Añadir una lista</div>
+			<div id="div1">
+			</div>
 		</div>
-	</fieldset>
+	</div>
 </div>
-	
-
 	<script type='text/javascript' src='main.js'></script>
 </body>
 </html>
